styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Open Sans", sans-serif;
}

body {
  width: 100%;
  display: flex;
  flex-direction: column;
}

.company-logo {
  width: 90px;
  height: 85px;
}

.company-logo:hover {
  cursor: pointer;
  scale: 1.2;
}

header {
  background-color: #ffffff;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 50px 100px;
}

.nav-list {
  list-style: none;
  display: flex;
  margin-right: 20px;
}

.nav-list-item {
  margin-left: 60px;
}

li a:hover {
  cursor: pointer;
  opacity: 0.5;
}

li a {
  font-size: 20px;
  text-decoration: none;
}

.nav-links {
  color: #c5a583;
}

.mobile-menu-icon {
  display: none;
}

.btn-menu {
  border: none;
  background: transparent;
  width: 60px;
}

.menu-mobile {
  display: none;
}

.manual-btn:hover {
  background-color: #727272;
}

main {
  width: 100%;
  background-color: #c5a583;
  min-height: 460px;
  max-width: 100%;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  box-shadow: inset 0px 10px 10px -7px rgba(0, 0, 0, 0.75);
}

.top-arrow-btn {
  position: fixed;
  bottom: 10px;
  right: 10px;
  z-index: 2;
  background: none;
  border: none;
  width: 50px;
  height: 50px;
  visibility: hidden;
  opacity: 0;

  transition: 0.3s;
  transform: translateY(100%);
}

.top-arrow-btn.show {
  visibility: visible;
  opacity: 1;
  transform: translateY(0);
}

.top-arrow-img {
  width: 100%;
  opacity: 0.75;
  border-radius: 20px;
}

.top-arrow-img:hover {
  opacity: 1;
  cursor: pointer;
}

.top-arrow-img:active {
  opacity: 0.75;
}

.swiper-slide img {
  width: 99%;
  height: 80%;
  object-fit: fill;
  border-radius: 20px;
  box-shadow: 4px 4px 9px 0px rgba(0, 0, 0, 0.75);
  transition: 0.6s all ease;
  visibility: hidden;
  opacity: 0;
}

.swiper-slide.swiper-slide-active img {
  opacity: 1;
  visibility: unset;
}

.swiper-slide img:hover {
  cursor: pointer;
}

.swiper {
  width: 100%;
  height: 100%;
  overflow: hidden;
}

.swiper-slide {
  width: 100%;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
}

.swiper-wrapper {
  height: 100%;
  padding: 10px 0;
}

.swiper-horizontal > .swiper-pagination-bullets,
.swiper-pagination-bullets.swiper-pagination-horizontal {
  bottom: 15px;
}

.properties {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin-bottom: 20px;
  overflow: hidden;
}

.properties-title {
  color: #ffffff;
  font-size: 22px;
  margin: 20px 0;
}

.available-properties-wrapper {
  width: 100%;
  display: grid;
  justify-content: center;
  align-items: center;
  grid-template-columns: repeat(4, minmax(215px, 215px));
  gap: 50px 100px;
  margin: 20px 0;
}

.available-property {
  height: 265px;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 20px;
  cursor: pointer;
  transition: 0.6s all ease;
  perspective: 1000px;
}

.flipper {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 20px;
  transition: transform 0.8s;
  transform-style: preserve-3d;
}

.available-property:hover .flipper {
  transform: rotateY(180deg);
}

.front {
  display: flex;
  justify-content: center;
}

.front img {
  position: absolute;
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 20px;
}

.back {
  transform: rotateY(180deg);
  background-color: white;
}

.front,
.back {
  position: absolute;
  width: 100%;
  height: 100%;
  border-radius: 20px;
  box-shadow: 4px 4px 9px 0px rgba(0, 0, 0, 0.75);
  backface-visibility: hidden;
}

.property-button {
  position: relative;
  bottom: 10px;
  align-self: flex-end;
  border: none;
  border-radius: 5px;
  background-color: red;
  color: #ffffff;
  box-shadow: 4px 4px 9px 0px rgba(0, 0, 0, 0.75);
  font-weight: 600;
  padding: 5px;
}

.about {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
  margin: 20px 0 50px 0;
  overflow: hidden;
}

.about-sheet {
  display: flex;
  justify-content: center;
  width: 100%;
  gap: 180px;
}

.about-image-wrapper {
  padding: 7px;
}

.about-image {
  max-width: 500px;
  width: 100%;
  border-radius: 20px;
  box-shadow: 4px 4px 9px 0px rgba(0, 0, 0, 0.75);
}

.about-text {
  width: 450px;
  margin: 20px 0;
}

.about-text-wrapper {
  padding: 7px;
}

.about-text-wrapper p {
  color: #ffffff;
}

.about h2 {
  color: #ffffff;
  text-align: center;
  font-size: 22px;
  margin-bottom: 20px;
}

.about-text-wrapper p {
  font-size: 20px;
}

footer {
  background-color: #ffffff;
  box-shadow: 0px -2px 10px 0px rgba(0, 0, 0, 0.75);
  width: 100%;
}

.footer-wrapper {
  display: flex;
  justify-content: space-between;
  padding: 10px 20px;
}

.footer-info {
  width: 392px;
}

.contact-list {
  list-style: none;
  margin-right: 15px;
}

.contact-list:hover {
  cursor: pointer;
  scale: 1.2;
}

.contact-footer {
  position: relative;
  right: 100px;
}

.contact-footer ul {
  display: flex;
  margin-bottom: 20px;
}

.contact-footer h3 {
  margin-bottom: 20px;
  color: #4d4d4d;
}

.footer-wrapper p {
  max-width: 400px;
  width: 100%;
  color: #4d4d4d;
}

.bottom-rights {
  display: block;
  align-self: flex-end;
  width: 100%;
  background-color: #0060f6;
  color: #ffffff;
  text-align: center;
}

.dev-link {
  cursor: pointer;
  text-decoration: none;
}

.dev-link:hover {
  color: blue;
}

@media screen and (max-width: 1200px) {
  .available-properties-wrapper {
    grid-template-columns: repeat(3, minmax(215px, 215px));
    gap: 50px 200px;
  }

  .about-sheet {
    gap: 100px;
  }
}

@media screen and (max-width: 1100px) {
  header {
    width: 100%;
    padding: 20px 30px;
  }

  .available-properties-wrapper {
    gap: 50px 180px;
  }

  .top-arrow-btn {
    display: none;
  }

  .contact-footer {
    right: 0;
  }

  .about-sheet {
    padding: 20px;
  }
}

@media screen and (max-width: 1010px) {
  .available-properties-wrapper {
    grid-template-columns: repeat(2, minmax(215px, 300px));
    padding: 10px;
  }
}

@media screen and (max-width: 900px) {
  .menu-mobile {
    display: flex;
    justify-content: center;
    background-color: #ffffff;
    z-index: 2;
    position: absolute;
    top: 129px;
    left: 0;
    width: 100%;
    height: 100vh;
    backdrop-filter: blur(10px);
  }

  .nav-list-mb {
    margin-top: 50px;
    text-align: center;
    list-style: none;
  }

  .nav-list-item {
    margin: 20px 0;
  }

  .mobile-menu-icon {
    display: block;
    width: 60px;
    filter: #c5a583;
  }

  .nav-desktop {
    display: none;
  }

  .top-arrow-btn {
    display: none;
  }

  .contact-footer {
    position: relative;
    right: 0;
  }

  .contact-list {
    margin-right: 0px;
  }

  .contact-list img {
    padding: 5px;
  }

  .about-sheet {
    flex-direction: column;
    align-items: center;
    gap: 0;
  }

  .about-text {
    text-align: center;
  }

  .about-text-wrapper h2 {
    text-align: center;
  }
}

@media screen and (max-width: 600px) {
  .available-properties-wrapper {
    grid-template-columns: repeat(1, minmax(215px, 350px));
    gap: 50px 100px;
  }

  .top-arrow-btn {
    display: none;
  }

  .footer-wrapper {
    flex-direction: column;
    align-items: center;
    text-align: center;
  }

  .footer-wrapper p {
    text-align: center;
  }

  .contact-footer {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 20px 0;
  }
}

@media screen and (max-width: 450px) {
  .about-text-wrapper p {
    width: 100%;
  }

  .footer-info {
    max-width: 300px;
  }

  .footer-wrapper p {
    max-width: 300px;
  }
}

